--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <ol>
       <li>Install: grab a pre-built binary or build it from source files.</li>
       <li> Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
-      <li>Add folders, adjust filters, hit <strong>Scan</strong>.</li>
-      <li>Review thumbnails, select duplicates, press <strong>Clean</strong>.</li>
+      <li>Select a folder, adjust filters, hit <strong>Scan</strong>.</li>
+      <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
     </ol>
   </div>
 
