--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </header>
 
 <main>
+
   <div class="card">
     <h2>Features</h2>
     <ul>
@@ -64,7 +65,7 @@
 </main>
 
 <footer>
-  MIT © 2025 <a href="https://github.com/YOU">initumX</a>
+  MIT © 2025 <a href="https://github.com/initumX">initumX</a>
 </footer>
 
 </body>
