--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 <main>
 
   <div class="card">
+    <h2>Screenshots</h2>
+
+    <figure style="margin:1rem 0">
+      <img
+        src="images/screenshot1.jpg"
+        alt="Main window with scan results"
+        style="max-width:100%;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.15)">
+      <figcaption style="margin-top:.4em;font-size:.9em;color:#555">
+        Main window showing duplicate groups, preview and context menu.
+      </figcaption>
+    </figure>
+  </div>
+
+  <div class="card">
     <h2>Features</h2>
     <ul>
       <li>Recursive file-system scan with progress bar</li>
