--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main>
 
   <div class="card">
-    <h2>Screenshots</h2>
+    <h2>Screenshot</h2>
 
     <figure style="margin:1rem 0">
       <img
@@ -59,9 +59,9 @@
   <div class="card">
     <h2>Quick Start</h2>
     <ol>
-      <li>Install: grab a pre-built binary or build it from source files.</li>
+      <li>Install: grab a <a class="btn" href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
       <li> Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
-      <li>Select a folder, adjust filters, hit <strong>Scan</strong>.</li>
+      <li>Select a folder, adjust filters, hit <strong>Find Duplicates</strong>.</li>
       <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
     </ol>
   </div>
