--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="card">
     <h2>Quick Start</h2>
     <ol>
-      <li>Install: grab a <a class="btn" href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
+      <li>Install: grab a <a href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
       <li> Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
       <li>Select a folder, adjust filters, hit <strong>Find Duplicates</strong>.</li>
       <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
