--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Deduplicator App</title>
+  <title>Deduplicator App – fast duplicate finder for Windows, Linux</title>
+  <meta name="description"
+      content="Free cross-platform duplicate finder with image preview, size/extension filters and safe deletion. Built with Python & PySide6.">
+  <meta name="keywords"
+      content="duplicate finder, duplicate photo remover, PySide6, cross-platform utility, free download">
   <style>
     :root { --accent:#0078d4; --bg:#fafafa; --card:#fff; }
     body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;background:var(--bg);color:#333}
