--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
     <ul>
       <li>Recursive file-system scan with progress bar</li>
       <li>Flexible filters: extension, min / max size</li>
-      <li>Image preview</li>
-      <li>Context menu, one-click deletion</li>
+      <li>Supports multiple search modes: fast, normal, full</li>
+      <li>Uses fast hash function <strong>xxhash</strong> </li>
+      <li>Supports Image preview, file selection (ctrl+mouse click to select multiple files), context menu</li>
+      <li>Supports deleting all duplicates at once (<strong>Keep one file per group</strong> button)</li>
+      <li>Uses tooltips to show filepath, creation date, etc</li>
       <li>Cross-platform GUI (Qt 6)</li>
     </ul>
   </div>
