--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <ul>
       <li>Recursive file-system scan with progress bar</li>
       <li>Flexible filters: extension, min / max size</li>
-      <li>Supports multiple search modes: fast (compare by first KBytes only), normal(first+middle+end KBytes), full(full-hash comparing)</li>
+      <li>Supports multiple search modes: <strong>fast</strong> (compare by first KBytes only), <strong>normal</strong>(first+middle+end KBytes), <strong>full</strong>(full-hash comparing)</li>
       <li>Uses fast hash function <strong>xxhash</strong> </li>
       <li>Supports Image preview, file selection (ctrl+mouse click to select multiple files), context menu</li>
       <li>Supports deleting all duplicates at once (<strong>Keep one file per group</strong> button)</li>
