--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <h2>Features</h2>
     <ul>
       <li>Recursive file-system scan with progress bar</li>
-      <li>Flexible filters: extension, min / max size</li>
-      <li>Supports multiple search modes: <strong>fast</strong> (compare by first KBytes only), <strong>normal</strong>(first+middle+end KBytes), <strong>full</strong>(full-hash comparing)</li>
+      <li>Flexible <strong>filters</strong>: extension, min / max size</li>
+      <li>Supports multiple search modes: <strong>fast</strong> (compare by first KBytes only), <strong>normal</strong> (first+middle+end KBytes), <strong>full</strong> (full-hash comparing)</li>
       <li>Uses fast hash function <strong>xxhash</strong> </li>
       <li>Supports Image preview, file selection (ctrl+mouse click to select multiple files), context menu</li>
       <li>Supports deleting all duplicates at once (<strong>Keep one file per group</strong> button)</li>
-      <li>Uses tooltips to show filepath, creation date, etc</li>
+      <li>Uses <strong>tooltips</strong> to show filepath, creation date, etc</li>
       <li>Cross-platform GUI (Qt 6)</li>
     </ul>
   </div>
@@ -66,8 +66,8 @@
   <div class="card">
     <h2>Quick Start</h2>
     <ol>
-      <li>Install: grab a <a href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
-      <li> Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
+      <li>Grab a <a href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
+      <li>Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
       <li>Select a folder, adjust filters, hit <strong>Find Duplicates</strong>.</li>
       <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
     </ol>
