--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <figure style="margin:1rem 0">
       <img
-        src="images/screenshot1.jpg"
+        src="images/deduplicator224.png"
         alt="Main window with scan results"
         style="max-width:100%;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.15)">
       <figcaption style="margin-top:.4em;font-size:.9em;color:#555">
