--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         alt="Main window with scan results"
         style="max-width:100%;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.15)">
       <figcaption style="margin-top:.4em;font-size:.9em;color:#555">
-        Main window showing duplicate groups, preview and context menu.
+        Main window.
       </figcaption>
     </figure>
   </div>
