--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Deduplicator App – fast duplicate finder for Windows, Linux</title>
+  <title>OnlyOne – fast duplicate finder for Windows and Linux</title>
   <meta name="description"
       content="Free cross-platform duplicate finder with image preview, size/extension filters and safe deletion. Built with Python & PySide6.">
   <meta name="keywords"
@@ -27,7 +27,7 @@
 <body>
 
 <header>
-  <h1>Deduplicator App</h1>
+  <h1>OnlyOne</h1>
   <p>Lightning-fast duplicate finder for Windows / Linux<br/>
      Built with Python&nbsp;3 &amp; PySide6 (Qt&nbsp;6)</p>
   <a class="btn" href="https://github.com/initumX/deduplicator/releases">Download Latest</a>
@@ -76,7 +76,7 @@
   <div class="card">
     <h2>Built With</h2>
     <ul>
-      <li><strong>Python 3.10+</strong></li>
+      <li><strong>Python 3.9+</strong></li>
       <li><strong>PySide6</strong> – Qt 6 bindings</li>
       <li><strong>send2trash</strong> – safe deletion</li>
       <li><strong>Pillow</strong> – image handling</li>
@@ -86,7 +86,7 @@
 </main>
 
 <footer>
-  MIT © 2025 <a href="https://github.com/initumX">initumX</a>
+  MIT © 2026 <a href="https://github.com/initumX">initumX</a>
 </footer>
 
 </body>
