--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <figure style="margin:1rem 0">
       <img
-        src="images/deduplicator224.png"
+        src="images/deduplicator247.png"
         alt="Main window with scan results"
         style="max-width:100%;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.15)">
       <figcaption style="margin-top:.4em;font-size:.9em;color:#555">
@@ -67,7 +67,7 @@
     <h2>Quick Start</h2>
     <ol>
       <li>Grab a <a href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
-      <li>Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./DeduplicatorV2_2_2</code></li>
+      <li>Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./OnlyOne</code></li>
       <li>Select a folder, adjust filters, hit <strong>Find Duplicates</strong>.</li>
       <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
     </ol>
