--- a/index.html
+++ b/index.html
@@ -66,10 +66,19 @@
   <div class="card">
     <h2>Quick Start</h2>
     <ol>
-      <li>Grab a <a href="https://github.com/initumX/deduplicator/releases">pre-built binary</a> or build it from source files.</li>
+      <li>Grab a <a href="https://github.com/initumX/onlyone/releases">pre-built binary</a> or build it from source files.</li>
       <li>Double-click the executable. If you use Linux, make file executable <code>chmod a+x ./OnlyOne</code></li>
       <li>Select a folder, adjust filters, hit <strong>Find Duplicates</strong>.</li>
       <li>Select files and run context menu to delete selected, or just press <strong>Keep one file per group</strong> to delete all duplicates at once.</li>
+    </ol>
+  </div>
+
+  <div class="card">
+    <h2>Links</h2>
+    <ol>
+      <li><a href="https://github.com/initumX/onlyone/">Github page</a></li>
+      <li><a href="https://pypi.org/project/onlyone/">PyPI page</a></li>
+      <li><a href="https://github.com/initumX/onlyone/releases">Releases</a></li>
     </ol>
   </div>
 
